# agentic-rag-bnpl

./: .gitignore  README.md  main.py  pyproject.toml  streamlit_app.py
src/config/: config.py
src/document_ingestion/: document_processor.py
src/vectorstore/: vectorstore.py
